# slater-film-catalog

./: .env.docker.example  .env.example  .gitignore  .prettierrc.json  CLAUDE.md  README.md  auth.config.example.json  compose.prod.yml  compose_down.sh  compose_up.sh  docker-compose.yml  esbuild.mjs  eslint.config.mjs  index.html  package-lock.json  package.json  pyproject.toml  stylelint.config.cjs  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.server.json  vite.config.ts  vitest.config.ts
.github/: copilot-instructions.md
.github/workflows/: build.yml
docker/api/: Dockerfile
docs/: 1c-transfer-verification-report.md  excel-schema.md  first-steps-merge-proposal.md  lmotm-integration-plan.md  pipeline-plan.md  production-home-gateway-architecture-plan.md  semantic-search-research.md
docs/done/: 1c-transfer-verification-report.md  first-steps-merge-proposal.md  spot-check-100-report.md
scripts/: 1_ingest_shotlist_pdfs.py  1b_ingest_excel.py  1b_ingest_first_steps.py  1c_verify_transfers.py  1d_ffprobe_metadata.py  1e_match_shotlist_pdfs.py  6_build_search_index.py  deploy.mjs  filename_parser.py  push-auth.sh  push-db.sh
scripts/files_audit/: disk_vs_db.py  excel_export.py  excel_import.py
scripts/matchers/: __init__.py  db_resolve.py  filename_parser.py
scripts/nara_scraper/: nara_scraper.py
scripts/one_time/: 1b_backfill_discovery_transfers.py  1b_download_nara_shotlists.py  1b_ingest_apollomaster_excel.py  1b_ingest_first_steps.py  analyze_catalog.py
src/: App.css  App.tsx  main.tsx  types.ts
src/__tests__/: smoke.test.ts  (+1 more)
(+67 files in other folders)
